<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio_2"
    android:orientation="vertical"
    tools:context=".ModPerfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="Modificación del Perfíl"
                android:textColor="@color/colorNegro"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="438dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorBlanco"
                app:cardCornerRadius="20dp"
                app:cardElevation="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_idM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="ID:"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edt_NombreM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/Nombre"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/edt_ApellidoM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/Apellido"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/edt_EmailM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/edt_TelM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/telefono"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/edt_contrasegnaM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="*******************"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnModDatosPerfilM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:onClick="ModificarDatosPerfil"
                        android:text="Modificar Datos" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                app:cardBackgroundColor="@color/colorAzul"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageViewMod"
                        android:layout_width="match_parent"
                        android:layout_height="209dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/user_foto" />

                    <Button
                        android:id="@+id/btnEliminarCuentaMP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:onClick="EliminarCuenta"
                        android:text="Eliminar Cuenta" />

                    <Button
                        android:id="@+id/btn_tomarFotoMod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:text="Tomar Foto" />

                    <Button
                        android:id="@+id/btn_saveMod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:onClick="ActualizarFoto"
                        android:text="Guardar imágen" />

                    <Button
                        android:id="@+id/btnSalirModP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:onClick="salirModPer"
                        android:text="Salir" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>